# gimbal-dartt-controller

./: CMakeLists.txt
src/: dartt_controller_params.h  dartt_gun_params.h  dartt_init.cpp  dartt_init.h  dartt_mctl_params.h  main.cpp  profiles.h
